force-app/main/default/objects/MAP_Order__c/MAP_Order__c.object-meta.xml
<CustomObject>
    <description>Marketing Activity Plan order under a MAP Budget (BRD 4.8). Multi-level approval; captures actuals; pushed to SAP after approval.</description>
    <label>MAP Order</label>
    <nameField>
        <displayFormat>MAPO-{00000}</displayFormat>
        <label>MAP Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MAP Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>