force-app/main/default/objects/MAP_Order__c/fields/Actuals__c.field-meta.xml
<CustomField>
    <fullName>Actuals__c</fullName>
    <description>Actual spend entered against this MAP order (BRD 4.8).</description>
    <label>Actuals</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>