force-app/main/default/objects/MAP_Order__c/fields/MAP_Budget__c.field-meta.xml
<CustomField>
    <fullName>MAP_Budget__c</fullName>
    <label>MAP Budget</label>
    <referenceTo>MAP_Budget__c</referenceTo>
    <relationshipLabel>MAP Orders</relationshipLabel>
    <relationshipName>MAP_Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>